--- a/index.html
+++ b/index.html
@@ -3,51 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>TimeBox AI - Fight Card</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Russo+One&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Inter', sans-serif;
-        background-color: #1a1a1a;
-        color: #e5e5e5;
-        overscroll-behavior-y: none; /* Prevent pull-to-refresh on mobile for app-like feel */
-      }
-      h1, h2, h3, .font-russo {
-        font-family: 'Russo One', sans-serif;
-      }
-      .font-pen {
-        font-family: 'Nanum Pen Script', cursive;
-      }
-      /* Custom Scrollbar */
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #262626;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #dc2626;
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #ef4444;
-      }
-      
-      /* Animation for pulsing background */
-      @keyframes pulse-ring {
-        0% { background-position: 0% 50%; }
-        50% { background-position: 100% 50%; }
-        100% { background-position: 0% 50%; }
-      }
-      .animate-gradient {
-        background-size: 200% 200%;
-        animation: pulse-ring 6s ease infinite;
-      }
-    </style>
   <script type="importmap">
 {
   "imports": {
